// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllPosts.vue has the expected html structure 1`] = `
<div>
  <div
    class="allPosts"
  >
    <h1
      class="post_heading"
    >
      All Posts 1
    </h1>
     
    <div
      class="mdl-textfield mdl-js-textfield"
    >
      <label
        class="mdl-button mdl-js-button mdl-button--icon"
      >
        <i
          class="material-icons"
        >
          search
        </i>
      </label>
       
      <input
        class="mdl-textfield__input"
        placeholder="Enter post title to search"
        type="text"
      />
    </div>
  </div>
   
  <div
    class="post"
  >
    <div>
      <h2
        class="post_title"
      >
        title
      </h2>
       
      <p
        class="post_message"
      >
        message
      </p>
       
      <p
        class="post_id"
      >
        id: 1
      </p>
       
      <div
        class="control_buttons"
      >
        <button
          class="edit"
          type="button"
        >
          Edit
        </button>
         
        <button
          class="delete"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllPosts.vue when search successfully 1`] = `
<div>
  <div
    class="allPosts"
  >
    <h1
      class="post_heading"
    >
      All Posts 1
    </h1>
     
    <div
      class="mdl-textfield mdl-js-textfield"
    >
      <label
        class="mdl-button mdl-js-button mdl-button--icon"
      >
        <i
          class="material-icons"
        >
          search
        </i>
      </label>
       
      <input
        class="mdl-textfield__input"
        placeholder="Enter post title to search"
        type="text"
      />
    </div>
  </div>
   
  <div
    class="post"
  >
    <div>
      <h2
        class="post_title"
      >
        title
      </h2>
       
      <p
        class="post_message"
      >
        message
      </p>
       
      <p
        class="post_id"
      >
        id: 1
      </p>
       
      <div
        class="control_buttons"
      >
        <button
          class="edit"
          type="button"
        >
          Edit
        </button>
         
        <button
          class="delete"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllPosts.vue when search unsuccessfully 1`] = `
<div>
  <div
    class="allPosts"
  >
    <h1
      class="post_heading"
    >
      All Posts 0
    </h1>
     
    <div
      class="mdl-textfield mdl-js-textfield"
    >
      <label
        class="mdl-button mdl-js-button mdl-button--icon"
      >
        <i
          class="material-icons"
        >
          search
        </i>
      </label>
       
      <input
        class="mdl-textfield__input"
        placeholder="Enter post title to search"
        type="text"
      />
    </div>
  </div>
   
  <div
    class="post"
    style="display: none;"
  >
    <div>
      <h2
        class="post_title"
      >
        title
      </h2>
       
      <p
        class="post_message"
      >
        message
      </p>
       
      <p
        class="post_id"
      >
        id: 1
      </p>
       
      <div
        class="control_buttons"
      >
        <button
          class="edit"
          type="button"
        >
          Edit
        </button>
         
        <button
          class="delete"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;
